[gd_scene load_steps=120 format=2]

[ext_resource path="res://Resources/Fondo/Fondo.png" type="Texture" id=1]
[ext_resource path="res://Resources/Player/png/Idle__000.png" type="Texture" id=2]
[ext_resource path="res://Escenas/Player/Player.gd" type="Script" id=3]
[ext_resource path="res://Resources/Player/png/Idle__004.png" type="Texture" id=4]
[ext_resource path="res://Resources/Player/png/Idle__007.png" type="Texture" id=5]
[ext_resource path="res://Resources/Player/png/Idle__008.png" type="Texture" id=6]
[ext_resource path="res://Resources/Player/png/Idle__005.png" type="Texture" id=7]
[ext_resource path="res://Resources/Player/png/Run__000.png" type="Texture" id=8]
[ext_resource path="res://Resources/Player/png/Run__003.png" type="Texture" id=9]
[ext_resource path="res://Resources/Player/png/Idle__001.png" type="Texture" id=10]
[ext_resource path="res://Resources/Player/png/Idle__009.png" type="Texture" id=11]
[ext_resource path="res://Resources/Player/png/Run__002.png" type="Texture" id=12]
[ext_resource path="res://Resources/Player/png/Idle__006.png" type="Texture" id=13]
[ext_resource path="res://Resources/Player/png/Run__007.png" type="Texture" id=14]
[ext_resource path="res://Resources/Player/png/Idle__003.png" type="Texture" id=15]
[ext_resource path="res://Resources/Player/png/Run__005.png" type="Texture" id=16]
[ext_resource path="res://Resources/Player/png/Run__009.png" type="Texture" id=17]
[ext_resource path="res://Resources/Player/png/Run__008.png" type="Texture" id=18]
[ext_resource path="res://Resources/Player/png/Idle__002.png" type="Texture" id=19]
[ext_resource path="res://Resources/Player/png/Run__001.png" type="Texture" id=20]
[ext_resource path="res://Resources/Player/png/Dead__000.png" type="Texture" id=21]
[ext_resource path="res://Resources/Player/png/Run__004.png" type="Texture" id=22]
[ext_resource path="res://Resources/Player/png/Run__006.png" type="Texture" id=23]
[ext_resource path="res://Resources/Player/png/Dead__002.png" type="Texture" id=24]
[ext_resource path="res://Escenas/Engrane/Engrane.tscn" type="PackedScene" id=25]
[ext_resource path="res://Escenas/Principal/Principal.gd" type="Script" id=26]
[ext_resource path="res://Resources/COMPUTERRobot.ttf" type="DynamicFontData" id=27]
[ext_resource path="res://Resources/Enemigo/Zombie M/Walk (10).png" type="Texture" id=28]
[ext_resource path="res://Resources/Enemigo/Zombie M/Walk (8).png" type="Texture" id=29]
[ext_resource path="res://Resources/Enemigo/Zombie M/Walk (9).png" type="Texture" id=30]
[ext_resource path="res://Resources/Enemigo/Zombie M/Walk (4).png" type="Texture" id=31]
[ext_resource path="res://Resources/Enemigo/Zombie M/Walk (1).png" type="Texture" id=32]
[ext_resource path="res://Resources/Enemigo/Zombie M/Walk (2).png" type="Texture" id=33]
[ext_resource path="res://Resources/Enemigo/Zombie M/Walk (5).png" type="Texture" id=34]
[ext_resource path="res://Resources/Enemigo/Zombie M/Walk (6).png" type="Texture" id=35]
[ext_resource path="res://Resources/Enemigo/Zombie M/Walk (3).png" type="Texture" id=36]
[ext_resource path="res://Resources/Enemigo/Zombie M/Walk (7).png" type="Texture" id=37]
[ext_resource path="res://Resources/Battery/Battery36.png" type="Texture" id=38]
[ext_resource path="res://Resources/Battery/Battery39.png" type="Texture" id=39]
[ext_resource path="res://Escenas/Enemigo/Enemigo.gd" type="Script" id=40]
[ext_resource path="res://Resources/Battery/Battery28.png" type="Texture" id=41]
[ext_resource path="res://Resources/Battery/Battery08.png" type="Texture" id=42]
[ext_resource path="res://Resources/Battery/Battery14.png" type="Texture" id=44]
[ext_resource path="res://Resources/Battery/Battery11.png" type="Texture" id=45]
[ext_resource path="res://Resources/Battery/Battery15.png" type="Texture" id=46]
[ext_resource path="res://Resources/Battery/Battery17.png" type="Texture" id=47]
[ext_resource path="res://Resources/Battery/Battery20.png" type="Texture" id=48]
[ext_resource path="res://Resources/Battery/Battery21.png" type="Texture" id=49]
[ext_resource path="res://Resources/Battery/Battery03.png" type="Texture" id=50]
[ext_resource path="res://Resources/Battery/Battery25.png" type="Texture" id=51]
[ext_resource path="res://Resources/Battery/Battery26.png" type="Texture" id=52]
[ext_resource path="res://Resources/Battery/Battery29.png" type="Texture" id=53]
[ext_resource path="res://Resources/Battery/Battery27.png" type="Texture" id=54]
[ext_resource path="res://Resources/Battery/Battery10.png" type="Texture" id=55]
[ext_resource path="res://Resources/Battery/Battery23.png" type="Texture" id=56]
[ext_resource path="res://Resources/Battery/Battery24.png" type="Texture" id=57]
[ext_resource path="res://Resources/Battery/Battery18.png" type="Texture" id=58]
[ext_resource path="res://Resources/Battery/Battery30.png" type="Texture" id=59]
[ext_resource path="res://Resources/Battery/Battery16.png" type="Texture" id=60]
[ext_resource path="res://Resources/Battery/Battery07.png" type="Texture" id=61]
[ext_resource path="res://Resources/Battery/Battery45.png" type="Texture" id=62]
[ext_resource path="res://Resources/Battery/Battery04.png" type="Texture" id=63]
[ext_resource path="res://Resources/Battery/Battery05.png" type="Texture" id=64]
[ext_resource path="res://Resources/Battery/Battery09.png" type="Texture" id=65]
[ext_resource path="res://Resources/Battery/Battery13.png" type="Texture" id=66]
[ext_resource path="res://Resources/Battery/Battery37.png" type="Texture" id=67]
[ext_resource path="res://Resources/Battery/Battery06.png" type="Texture" id=68]
[ext_resource path="res://Resources/Battery/Battery12.png" type="Texture" id=69]
[ext_resource path="res://Resources/Battery/Battery19.png" type="Texture" id=70]
[ext_resource path="res://Resources/Battery/Battery22.png" type="Texture" id=71]
[ext_resource path="res://Escenas/Bateria/Bateria.gd" type="Script" id=72]
[ext_resource path="res://Resources/Escudo.png" type="Texture" id=73]
[ext_resource path="res://Resources/Audio/1.wav" type="AudioStream" id=74]
[ext_resource path="res://Resources/Audio/GameOver.wav" type="AudioStream" id=75]
[ext_resource path="res://Resources/Audio/2.wav" type="AudioStream" id=76]
[ext_resource path="res://Resources/Audio/3.wav" type="AudioStream" id=77]
[ext_resource path="res://Resources/Audio/MusicaGeneral.ogg" type="AudioStream" id=78]
[ext_resource path="res://Resources/Player/png/Dead__005.png" type="Texture" id=79]
[ext_resource path="res://Resources/Player/png/Dead__003.png" type="Texture" id=80]
[ext_resource path="res://Resources/Player/png/Dead__001.png" type="Texture" id=81]
[ext_resource path="res://Resources/Player/png/Dead__006.png" type="Texture" id=82]
[ext_resource path="res://Resources/Player/png/Dead__007.png" type="Texture" id=83]
[ext_resource path="res://Resources/Player/png/Dead__004.png" type="Texture" id=84]
[ext_resource path="res://Resources/Player/png/Dead__009.png" type="Texture" id=85]
[ext_resource path="res://Resources/Player/png/Dead__008.png" type="Texture" id=86]
[ext_resource path="res://Resources/Battery/Battery40.png" type="Texture" id=87]
[ext_resource path="res://Resources/Battery/Battery34.png" type="Texture" id=88]
[ext_resource path="res://Resources/Battery/Battery42.png" type="Texture" id=89]
[ext_resource path="res://Resources/Battery/Battery41.png" type="Texture" id=90]
[ext_resource path="res://Resources/Battery/Battery44.png" type="Texture" id=91]
[ext_resource path="res://Resources/Battery/Battery33.png" type="Texture" id=93]
[ext_resource path="res://Resources/Battery/Battery35.png" type="Texture" id=94]
[ext_resource path="res://Resources/Battery/Battery43.png" type="Texture" id=95]
[ext_resource path="res://Resources/Battery/Battery38.png" type="Texture" id=96]
[ext_resource path="res://Resources/Battery/Battery32.png" type="Texture" id=97]
[ext_resource path="res://Resources/Battery/Battery59.png" type="Texture" id=104]
[ext_resource path="res://Resources/Battery/Battery57.png" type="Texture" id=105]
[ext_resource path="res://Resources/Battery/Battery60.png" type="Texture" id=106]
[ext_resource path="res://Resources/Battery/Battery61.png" type="Texture" id=107]
[ext_resource path="res://Resources/Battery/Battery48.png" type="Texture" id=108]
[ext_resource path="res://Resources/Battery/Battery47.png" type="Texture" id=109]
[ext_resource path="res://Resources/Battery/Battery58.png" type="Texture" id=110]
[ext_resource path="res://Resources/Battery/Battery52.png" type="Texture" id=111]
[ext_resource path="res://Resources/Battery/Battery51.png" type="Texture" id=112]
[ext_resource path="res://Resources/Battery/Battery53.png" type="Texture" id=113]
[ext_resource path="res://Resources/Battery/Battery46.png" type="Texture" id=114]
[ext_resource path="res://Resources/Battery/Battery54.png" type="Texture" id=115]
[ext_resource path="res://Resources/Battery/Battery56.png" type="Texture" id=116]
[ext_resource path="res://Resources/Battery/Battery50.png" type="Texture" id=117]
[ext_resource path="res://Resources/Battery/Battery55.png" type="Texture" id=118]
[ext_resource path="res://Resources/Battery/Battery49.png" type="Texture" id=119]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 21 ), ExtResource( 81 ), ExtResource( 24 ), ExtResource( 80 ), ExtResource( 84 ), ExtResource( 79 ), ExtResource( 82 ), ExtResource( 83 ), ExtResource( 86 ), ExtResource( 85 ) ],
"loop": false,
"name": "Hurt",
"speed": 5.0
}, {
"frames": [ ExtResource( 2 ), ExtResource( 10 ), ExtResource( 19 ), ExtResource( 15 ), ExtResource( 4 ), ExtResource( 7 ), ExtResource( 13 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 11 ) ],
"loop": true,
"name": "Idle",
"speed": 10.0
}, {
"frames": [ ExtResource( 20 ), ExtResource( 8 ), ExtResource( 12 ), ExtResource( 9 ), ExtResource( 22 ), ExtResource( 16 ), ExtResource( 23 ), ExtResource( 14 ), ExtResource( 18 ), ExtResource( 17 ) ],
"loop": true,
"name": "Run",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=2]
radius = 16.0
height = 56.0

[sub_resource type="DynamicFont" id=3]
size = 40
font_data = ExtResource( 27 )

[sub_resource type="DynamicFont" id=4]
size = 33
font_data = ExtResource( 27 )

[sub_resource type="SpriteFrames" id=5]
animations = [ {
"frames": [ ExtResource( 32 ), ExtResource( 33 ), ExtResource( 36 ), ExtResource( 31 ), ExtResource( 34 ), ExtResource( 35 ), ExtResource( 37 ), ExtResource( 29 ), ExtResource( 30 ), ExtResource( 28 ) ],
"loop": true,
"name": "ZWalck",
"speed": 9.0
} ]

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 15.8125, 37.5 )

[sub_resource type="CapsuleShape2D" id=8]
radius = 12.0
height = 32.0

[sub_resource type="SpriteFrames" id=7]
animations = [ {
"frames": [ ExtResource( 50 ), ExtResource( 63 ), ExtResource( 64 ), ExtResource( 68 ), ExtResource( 61 ), ExtResource( 42 ), ExtResource( 65 ), ExtResource( 55 ), ExtResource( 45 ), ExtResource( 69 ), ExtResource( 66 ), ExtResource( 44 ), ExtResource( 46 ), ExtResource( 60 ), ExtResource( 47 ), ExtResource( 58 ), ExtResource( 70 ), ExtResource( 48 ), ExtResource( 49 ), ExtResource( 71 ), ExtResource( 56 ), ExtResource( 57 ), ExtResource( 51 ), ExtResource( 52 ), ExtResource( 54 ), ExtResource( 41 ), ExtResource( 53 ), ExtResource( 59 ), ExtResource( 97 ), ExtResource( 93 ), ExtResource( 88 ), ExtResource( 94 ), ExtResource( 38 ), ExtResource( 67 ), ExtResource( 96 ), ExtResource( 39 ), ExtResource( 87 ), ExtResource( 90 ), ExtResource( 89 ), ExtResource( 95 ), ExtResource( 91 ), ExtResource( 62 ), ExtResource( 114 ), ExtResource( 109 ), ExtResource( 108 ), ExtResource( 119 ), ExtResource( 117 ), ExtResource( 112 ), ExtResource( 111 ), ExtResource( 113 ), ExtResource( 115 ), ExtResource( 118 ), ExtResource( 116 ), ExtResource( 105 ), ExtResource( 110 ), ExtResource( 104 ), ExtResource( 106 ), ExtResource( 107 ) ],
"loop": true,
"name": "Bateria",
"speed": 10.0
} ]

[node name="Principal" type="Node2D"]
script = ExtResource( 26 )
Engrane = ExtResource( 25 )

[node name="Fondo" type="Sprite" parent="."]
modulate = Color( 0.729412, 0.85098, 1, 1 )
texture = ExtResource( 1 )
centered = false

[node name="Player" type="Area2D" parent="."]
script = ExtResource( 3 )

[node name="Escudo" type="Sprite" parent="Player"]
visible = false
modulate = Color( 0.45098, 0.984314, 0.0117647, 0.313726 )
texture = ExtResource( 73 )

[node name="SpritePlayer" type="AnimatedSprite" parent="Player"]
scale = Vector2( 0.2, 0.2 )
frames = SubResource( 1 )
playing = true

[node name="CollisionPlayer" type="CollisionShape2D" parent="Player"]
shape = SubResource( 2 )

[node name="ContenedorEngranes" type="Node2D" parent="."]

[node name="ContenedorTimers" type="Node2D" parent="."]

[node name="TimerMensaje" type="Timer" parent="ContenedorTimers"]
wait_time = 2.0
one_shot = true

[node name="TimerGeneral" type="Timer" parent="ContenedorTimers"]
autostart = true

[node name="TimerEnemigo" type="Timer" parent="ContenedorTimers"]
wait_time = 3.0
autostart = true

[node name="ContenedorAudios" type="Node2D" parent="."]

[node name="AudioPuntos" type="AudioStreamPlayer" parent="ContenedorAudios"]
stream = ExtResource( 74 )

[node name="AudioLevel" type="AudioStreamPlayer" parent="ContenedorAudios"]
stream = ExtResource( 76 )

[node name="AudioGameOver" type="AudioStreamPlayer" parent="ContenedorAudios"]
stream = ExtResource( 75 )

[node name="AudioPowerUp" type="AudioStreamPlayer" parent="ContenedorAudios"]
stream = ExtResource( 77 )

[node name="AudioGeneral" type="AudioStreamPlayer" parent="ContenedorAudios"]
stream = ExtResource( 78 )

[node name="Interfaz" type="CanvasLayer" parent="."]

[node name="Titulos" type="Label" parent="Interfaz"]
margin_left = -2.0
margin_top = 18.0
margin_right = 478.0
margin_bottom = 68.0
custom_colors/font_color = Color( 0.00392157, 0.0823529, 0.784314, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 3 )
text = "Puntos     Tiempo     Nivel"
align = 1
valign = 1

[node name="Mensaje" type="Label" parent="Interfaz"]
visible = false
margin_top = 236.0
margin_right = 480.0
margin_bottom = 286.0
custom_colors/font_color = Color( 0.00392157, 0.0823529, 0.784314, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 3 )
text = "level up!!!"
align = 1
valign = 1

[node name="Puntos" type="Label" parent="Interfaz"]
margin_left = 48.0
margin_top = 55.0
margin_right = 148.0
margin_bottom = 105.0
rect_pivot_offset = Vector2( 50, 25 )
custom_colors/font_color = Color( 0.0784314, 0.784314, 0.00392157, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 3 )
align = 1
valign = 1

[node name="Tiempo" type="Label" parent="Interfaz"]
margin_left = 210.0
margin_top = 55.0
margin_right = 310.0
margin_bottom = 105.0
custom_colors/font_color = Color( 0.0784314, 0.784314, 0.00392157, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 3 )
align = 1
valign = 1

[node name="Nivel" type="Label" parent="Interfaz"]
margin_left = 352.0
margin_top = 55.0
margin_right = 452.0
margin_bottom = 105.0
custom_colors/font_color = Color( 0.0784314, 0.784314, 0.00392157, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 3 )
align = 1
valign = 1

[node name="Button" type="Button" parent="Interfaz"]
visible = false
margin_left = 176.0
margin_top = 536.0
margin_right = 303.0
margin_bottom = 590.0
custom_colors/font_color = Color( 0.47451, 0.368627, 0.796078, 1 )
custom_fonts/font = SubResource( 4 )
text = "START"

[node name="Enemigo" type="Area2D" parent="." groups=["Enemigo"]]
script = ExtResource( 40 )

[node name="SpriteEnemigo" type="AnimatedSprite" parent="Enemigo"]
position = Vector2( -33, -13 )
scale = Vector2( 0.152326, 0.181118 )
frames = SubResource( 5 )
animation = "ZWalck"
frame = 3
playing = true

[node name="HitboxEnemigo" type="CollisionShape2D" parent="Enemigo"]
position = Vector2( -34.8125, -9.5 )
shape = SubResource( 6 )

[node name="Bateria" type="Area2D" parent="." groups=["Bateria"]]
position = Vector2( -100, -100 )
script = ExtResource( 72 )

[node name="ColicionBateria" type="CollisionShape2D" parent="Bateria"]
shape = SubResource( 8 )

[node name="SpriteBateria" type="AnimatedSprite" parent="Bateria"]
scale = Vector2( 0.35, 0.35 )
frames = SubResource( 7 )
animation = "Bateria"
frame = 7
playing = true

[node name="TimerBateriaSalida" type="Timer" parent="Bateria"]
wait_time = 5.0
one_shot = true

[node name="TimerBateria" type="Timer" parent="Bateria"]
wait_time = 10.0
autostart = true

[connection signal="area_entered" from="Player" to="Player" method="_on_Player_area_entered"]
[connection signal="encontrado" from="Player" to="." method="_on_Player_encontrado"]
[connection signal="escudado" from="Player" to="." method="_on_Player_escudado"]
[connection signal="proteccion" from="Player" to="." method="_on_Player_proteccion"]
[connection signal="tocado" from="Player" to="." method="_on_Player_tocado"]
[connection signal="timeout" from="ContenedorTimers/TimerMensaje" to="." method="_on_TimerMensaje_timeout"]
[connection signal="timeout" from="ContenedorTimers/TimerGeneral" to="." method="_on_TimerGeneral_timeout"]
[connection signal="timeout" from="ContenedorTimers/TimerEnemigo" to="." method="_on_TimerEnemigo_timeout"]
[connection signal="pressed" from="Interfaz/Button" to="." method="_on_Button_pressed"]
[connection signal="timeout" from="Bateria/TimerBateriaSalida" to="Bateria" method="_on_TimerBateriaSalida_timeout"]
[connection signal="timeout" from="Bateria/TimerBateria" to="Bateria" method="_on_TimerBateria_timeout"]
